--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,48 @@
       z-index: 10;
     }
 
+    header.app-bar {
+      color: white;
+      padding: 5px 16px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .logo-container {
+      font-weight: bold;
+      font-size: 18px;
+      color: #003BFF;
+      padding: 8px 30px;
+      border-radius: 6px;
+      font-weight: bold;
+      font-size: 18px;
+    }
+
+    .logo-container span {
+      color: black;
+    }
+
+    .page-title {
+      padding: 16px;
+      font-size: 20px;
+      font-weight: 600;
+    }
+
+    .menu-button {
+      background: none;
+      border: none;
+      font-size: 24px;
+      color: black;
+      cursor: pointer;
+    }
+
     h1 {
       text-align: center;
-      margin: 0 0 20px 0;
+      margin: 20px 0 20px 0;
     }
 
     .buttons {
@@ -40,8 +79,7 @@
       border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
-      background-color: #bbbbbb;
-      color: white;
+      color: black;
     }
 
     #modoButtons button {
@@ -52,19 +90,17 @@
     }
 
     #modoButtons button.selected {
-      color: white;
+      border: 2px solid #003BFF;
+      color: #002efe;
     }
 
     .buttons button.selected {
-      background-color: #1e88e5;
+      background-color: #002efe;
     }
 
     #tonicButtons button.selected {
       background-color: #002efe;
-    }
-
-    #modoButtons button.selected {
-      background-color: black;
+      color: white;
     }
 
     .cards {
@@ -101,7 +137,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: calc(100vh - 350px);
+      min-height: calc(100vh - 450px);
     }
 
     .popup {
@@ -123,6 +159,8 @@
     .card:hover .popup,
     .card.show .popup {
       display: block;
+      opacity: 0.9;
+      transition: opacity 0.2s ease;
     }
 
     #modulacoesContainer {
@@ -134,18 +172,74 @@
     #modulacoesContainer h2 {
       margin-bottom: 10px;
     }
+
+    .splash-screen {
+      position: fixed;
+      inset: 0;
+      background-color: #002efe;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+      transition: opacity 0.8s ease;
+    }
+
+    .splash-screen.hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .splash-content {
+      text-align: center;
+      animation: popin 0.8s ease;
+    }
+
+    #header.hidden {
+      display: none !important;
+    }
+
+    .main {
+      padding: 0 16px 50px;
+    }
+
+    @keyframes popin {
+      0% {
+        transform: scale(0.7);
+        opacity: 0;
+      }
+
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
   </style>
 </head>
 
 <body>
-  <header>
+
+  <div id="splash" class="splash-screen">
+    <div class="splash-content">
+      <h1>Harmonic <span style="color: black;">Tools.</span></h1>
+    </div>
+  </div>
+
+  <main>
+    <header id="header" class="app-bar">
+      <div class="logo-container">
+        Harmonic <span>Tools.</span>
+      </div>
+      <button class="menu-button" onclick="alert('Menu futuro aqui')">☰</button>
+    </header>
+
     <h1>Campo Harmônico</h1>
     <div class="buttons" id="modoButtons"></div>
     <div class="buttons" id="tonicButtons"></div>
-  </header>
+    <div id="modosContainer"></div>
+    <div id="modulacoesContainer"></div>
 
-  <div id="modosContainer"></div>
-  <div id="modulacoesContainer"></div>
+  </main>
 
   <script>
     const tonalidades = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B'];
@@ -370,9 +464,22 @@
       });
     }
 
+    function iniciarSplash() {
+      const splash = document.getElementById('splash');
+      const header = document.getElementById('header');
+
+      header.classList.add('hidden');
+
+      setTimeout(() => {
+        splash.classList.add('hidden');
+        header.classList.remove('hidden');
+      }, 2000);
+    }
+
     criarBotoes();
     atualizarCards();
     ativarEventosDePopup();
+    iniciarSplash();
   </script>
 </body>
 
